add veelidate for address form

--- a/storefront/src/i18n/locales/de.json
+++ b/storefront/src/i18n/locales/de.json
@@ -2,5 +2,8 @@
   "hello": "Hallo",
   "contact": "Kontakt",
   "cart": "Warenkorb",
-  "from": "Ab"
+  "from": "Ab",
+  "field_required": "{field} is required",
+  "invalid_email": "Please enter a valid email address",
+  "min_length": "{field} must be at least {length} characters"
 }
