--- a/storefront/src/i18n/locales/en.json
+++ b/storefront/src/i18n/locales/en.json
@@ -2,5 +2,8 @@
   "hello": "Hello",
   "contact": "Contact",
   "cart": "Cart",
-  "from": "From"
+  "from": "From",
+  "field_required": "{field} is required",
+  "invalid_email": "Please enter a valid email address",
+  "min_length": "{field} must be at least {length} characters"
 }
